	documentation or the style. It should ease future modifications
	tracking. Also new features missing in exmpp_xml were identified.

	* src/compat/stringprep.erl: Synchronize this compat module with the
	latest version from ejabberd repository (revision 1344). As with xml,
	the modifications are limited to the calls to exmpp_stringprep.

2008-06-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl, src/core/exmpp_tls.erl,
	src/core/exmpp_compress.erl: Move underlying_recv/2 and
	underlying_send/2 to exmpp_internals. exmpp_tls and exmpp_compress
	were sharing this small piece of code.

	* src/core/exmpp_internals.erl: Fixed a bug with documentation.

	* src/compat/iconv.erl, src/compat/sha.erl, c_src/iconv_erl.c,
	m4/iconv.m4, src/Emakefile.in, src/Makefile.am, c_src/Makefile.unix,
	c_src/Makefile.am, doc/Makefile.am, ebin/Makefile.am,
	ebin/exmpp.app.in, configure.ac: Remove 'iconv' and 'sha' from the
	compat layer as they belong to ejabberd specificaly. Also the
	configure script doesn't check for iconv(3) anymore.

	* src/core/exmpp_compress.erl: Rename compress/2 to
	enable_compression/2. Add function disable_compression/1.

	* src/core/exmpp_internals.erl, src/core/exmpp_tls.erl,
	src/core/exmpp_compress.erl: Add functions setopts/2, peername/1 and
	sockname/1.

2008-05-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Reorganize the final summary and add bold titles to
	make the output more readable.

	* src/core/exmpp_compress.erl: Rename the 'mode' option to
	'packet_mode'.

	* src/core/exmpp_tls.erl: Now interpret options and run the
	corresponding port driver commands.

	* c_src/exmpp_tls.h, c_src/exmpp_tls.c, c_src/Makefile.am: Move common
	TLS constants and functions to a separate C file.

	* c_src/exmpp_tls_openssl.c: Add support for options. Fix a bug with
	the COMMAND_SET_PEER_VERIF command where expected_id was always set to
	the empty string when the caller specified a boolean instead. Add