@@ -5,3 +5,7 @@ headersdir = $(ERLANG_INSTALL_LIB_DIR_exmpp)/include
 dist_headers_DATA = exmpp.hrl \
 		    xmpp.hrl \
 		    exmpp_client.hrl
+
+if BUILD_COMPAT
+dist_headers_DATA += jlib.hrl
+endif
